exports[`no-duplicate-mock-timers-enable > invalid(1): import {mock, only} from 'node:test';\nonly('t', () => { mock.timers.enable(); mock.timers.enable(); }); 1`] = `

  1 | import {mock, only} from 'node:test';
  2 | only('t', () => { mock.timers.enable(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(1): import {mock, only} from 'node:test';\nonly('t', () => { mock.timers.enable(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import {mock, only} from 'node:test';
> 2 | only('t', () => { mock.timers.enable(); mock.timers.enable(); });
    |                                         ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(10): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); mock.timers.reset(); mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { t.mock.timers.enable(); mock.timers.reset(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(10): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); mock.timers.reset(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { t.mock.timers.enable(); mock.timers.reset(); mock.timers.enable(); });
    |                                                                   ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(11): import {test, mock, getTestContext} from 'node:test';\ntest('a', t => {\n\tgetTestContext().mock.timers.enable();\n\tmock.timers.enable();\n}); 1`] = `

  1 | import {test, mock, getTestContext} from 'node:test';
  2 | test('a', t => {
  3 | 	getTestContext().mock.timers.enable();
  4 | 	mock.timers.enable();
  5 | });

`;

exports[`no-duplicate-mock-timers-enable > invalid(11): import {test, mock, getTestContext} from 'node:test';\ntest('a', t => {\n\tgetTestContext().mock.timers.enable();\n\tmock.timers.enable();\n}); 2`] = `

Message:
  1 | import {test, mock, getTestContext} from 'node:test';
  2 | test('a', t => {
  3 | 	getTestContext().mock.timers.enable();
> 4 | 	mock.timers.enable();
    | 	^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  5 | });

`;

exports[`no-duplicate-mock-timers-enable > invalid(12): import test, {mock} from 'node:test';\nmock.timers.enable();\nmock.timers.enable(); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(12): import test, {mock} from 'node:test';\nmock.timers.enable();\nmock.timers.enable(); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
> 3 | mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(13): import test, {mock} from 'node:test';\nclass A {\n\tstatic {\n\t\tmock.timers.enable();\n\t\tmock.timers.enable();\n\t}\n} 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		mock.timers.enable();
  5 | 		mock.timers.enable();
  6 | 	}
  7 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(13): import test, {mock} from 'node:test';\nclass A {\n\tstatic {\n\t\tmock.timers.enable();\n\t\tmock.timers.enable();\n\t}\n} 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		mock.timers.enable();
> 5 | 		mock.timers.enable();
    | 		^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  6 | 	}
  7 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(14): import test, {mock} from 'node:test';\nmock.timers.enable();\ntest.mock.timers.enable(); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | test.mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(14): import test, {mock} from 'node:test';\nmock.timers.enable();\ntest.mock.timers.enable(); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
> 3 | test.mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(15): import test, {mock} from 'node:test';\nmock.timers.enable();\nmock.timers.enable();\nmock.timers.enable(); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | mock.timers.enable();
  4 | mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(15): import test, {mock} from 'node:test';\nmock.timers.enable();\nmock.timers.enable();\nmock.timers.enable(); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
> 3 | mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  4 | mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(15): import test, {mock} from 'node:test';\nmock.timers.enable();\nmock.timers.enable();\nmock.timers.enable(); 3`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | mock.timers.enable();
> 4 | mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(16): import test, {mock} from 'node:test';\nmock.timers.enable();\nclass A {\n\tstatic {\n\t\tmock.timers.enable();\n\t}\n} 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | class A {
  4 | 	static {
  5 | 		mock.timers.enable();
  6 | 	}
  7 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(16): import test, {mock} from 'node:test';\nmock.timers.enable();\nclass A {\n\tstatic {\n\t\tmock.timers.enable();\n\t}\n} 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | class A {
  4 | 	static {
> 5 | 		mock.timers.enable();
    | 		^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  6 | 	}
  7 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(17): import test, {mock} from 'node:test';\nclass A {\n\tstatic {\n\t\tmock.timers.enable();\n\t}\n}\nmock.timers.enable(); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		mock.timers.enable();
  5 | 	}
  6 | }
  7 | mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(17): import test, {mock} from 'node:test';\nclass A {\n\tstatic {\n\t\tmock.timers.enable();\n\t}\n}\nmock.timers.enable(); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | class A {
  3 | 	static {
  4 | 		mock.timers.enable();
  5 | 	}
  6 | }
> 7 | mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(18): import test, {mock} from 'node:test';\nmock.timers.enable();\nclass A {\n\tstatic timers = mock.timers.enable();\n} 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | class A {
  4 | 	static timers = mock.timers.enable();
  5 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(18): import test, {mock} from 'node:test';\nmock.timers.enable();\nclass A {\n\tstatic timers = mock.timers.enable();\n} 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | class A {
> 4 | 	static timers = mock.timers.enable();
    | 	                ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  5 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(19): import test, {mock} from 'node:test';\nclass A {\n\tstatic timers = mock.timers.enable();\n}\nmock.timers.enable(); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | class A {
  3 | 	static timers = mock.timers.enable();
  4 | }
  5 | mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(19): import test, {mock} from 'node:test';\nclass A {\n\tstatic timers = mock.timers.enable();\n}\nmock.timers.enable(); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | class A {
  3 | 	static timers = mock.timers.enable();
  4 | }
> 5 | mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(2): import {mock, only} from 'node:test';\nonly({name: 't', fn() { mock.timers.enable(); mock.timers.enable(); }}); 1`] = `

  1 | import {mock, only} from 'node:test';
  2 | only({name: 't', fn() { mock.timers.enable(); mock.timers.enable(); }});

`;

exports[`no-duplicate-mock-timers-enable > invalid(2): import {mock, only} from 'node:test';\nonly({name: 't', fn() { mock.timers.enable(); mock.timers.enable(); }}); 2`] = `

Message:
  1 | import {mock, only} from 'node:test';
> 2 | only({name: 't', fn() { mock.timers.enable(); mock.timers.enable(); }});
    |                                               ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(20): import test, {mock} from 'node:test';\nclass A {\n\tstatic timers = [mock.timers.enable(), mock.timers.enable()];\n} 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | class A {
  3 | 	static timers = [mock.timers.enable(), mock.timers.enable()];
  4 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(20): import test, {mock} from 'node:test';\nclass A {\n\tstatic timers = [mock.timers.enable(), mock.timers.enable()];\n} 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | class A {
> 3 | 	static timers = [mock.timers.enable(), mock.timers.enable()];
    | 	                                       ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  4 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(21): import test, {mock} from 'node:test';\nmock.timers.enable();\nclass A {\n\tstatic {\n\t\tclass B {\n\t\t\tstatic {\n\t\t\t\tmock.timers.enable();\n\t\t\t}\n\t\t}\n\t}\n} 1`] = `

   1 | import test, {mock} from 'node:test';
   2 | mock.timers.enable();
   3 | class A {
   4 | 	static {
   5 | 		class B {
   6 | 			static {
   7 | 				mock.timers.enable();
   8 | 			}
   9 | 		}
  10 | 	}
  11 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(21): import test, {mock} from 'node:test';\nmock.timers.enable();\nclass A {\n\tstatic {\n\t\tclass B {\n\t\t\tstatic {\n\t\t\t\tmock.timers.enable();\n\t\t\t}\n\t\t}\n\t}\n} 2`] = `

Message:
   1 | import test, {mock} from 'node:test';
   2 | mock.timers.enable();
   3 | class A {
   4 | 	static {
   5 | 		class B {
   6 | 			static {
>  7 | 				mock.timers.enable();
     | 				^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
   8 | 			}
   9 | 		}
  10 | 	}
  11 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(22): import test, {mock} from 'node:test';\nmock.timers.enable();\nclass A {\n\tstatic {\n\t\tclass B {\n\t\t\tstatic timers = mock.timers.enable();\n\t\t}\n\t}\n} 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | class A {
  4 | 	static {
  5 | 		class B {
  6 | 			static timers = mock.timers.enable();
  7 | 		}
  8 | 	}
  9 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(22): import test, {mock} from 'node:test';\nmock.timers.enable();\nclass A {\n\tstatic {\n\t\tclass B {\n\t\t\tstatic timers = mock.timers.enable();\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | class A {
  4 | 	static {
  5 | 		class B {
> 6 | 			static timers = mock.timers.enable();
    | 			                ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  7 | 		}
  8 | 	}
  9 | }

`;

exports[`no-duplicate-mock-timers-enable > invalid(23): import test, {mock} from 'node:test';\ntest(\"title\", () => { class A { static { mock.timers.enable(); mock.timers.enable(); } } }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", () => { class A { static { mock.timers.enable(); mock.timers.enable(); } } });

`;

exports[`no-duplicate-mock-timers-enable > invalid(23): import test, {mock} from 'node:test';\ntest(\"title\", () => { class A { static { mock.timers.enable(); mock.timers.enable(); } } }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", () => { class A { static { mock.timers.enable(); mock.timers.enable(); } } });
    |                                                                ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(24): import test, {mock} from 'node:test';\ntest(\"title\", () => { class A { static timers = [mock.timers.enable(), mock.timers.enable()]; } }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", () => { class A { static timers = [mock.timers.enable(), mock.timers.enable()]; } });

`;

exports[`no-duplicate-mock-timers-enable > invalid(24): import test, {mock} from 'node:test';\ntest(\"title\", () => { class A { static timers = [mock.timers.enable(), mock.timers.enable()]; } }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", () => { class A { static timers = [mock.timers.enable(), mock.timers.enable()]; } });
    |                                                                        ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(25): import test, {mock} from 'node:test';\ntest(\"title\", () => { mock.timers.enable(); class A { static { mock.timers.enable(); } } }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", () => { mock.timers.enable(); class A { static { mock.timers.enable(); } } });

`;

exports[`no-duplicate-mock-timers-enable > invalid(25): import test, {mock} from 'node:test';\ntest(\"title\", () => { mock.timers.enable(); class A { static { mock.timers.enable(); } } }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", () => { mock.timers.enable(); class A { static { mock.timers.enable(); } } });
    |                                                                ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(26): import test, {mock} from 'node:test';\ntest(\"title\", () => { class A { static { mock.timers.enable(); } } mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", () => { class A { static { mock.timers.enable(); } } mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(26): import test, {mock} from 'node:test';\ntest(\"title\", () => { class A { static { mock.timers.enable(); } } mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", () => { class A { static { mock.timers.enable(); } } mock.timers.enable(); });
    |                                                                    ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(27): import test, {mock} from 'node:test';\ntest(\"title\", () => { class A { static { mock.timers.enable(); } } class B { static { mock.timers.enable(); } } }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", () => { class A { static { mock.timers.enable(); } } class B { static { mock.timers.enable(); } } });

`;

exports[`no-duplicate-mock-timers-enable > invalid(27): import test, {mock} from 'node:test';\ntest(\"title\", () => { class A { static { mock.timers.enable(); } } class B { static { mock.timers.enable(); } } }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", () => { class A { static { mock.timers.enable(); } } class B { static { mock.timers.enable(); } } });
    |                                                                                       ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(28): import {describe, mock} from 'node:test';\ndescribe(\"suite\", () => { class A { static { mock.timers.enable(); } } mock.timers.enable(); }); 1`] = `

  1 | import {describe, mock} from 'node:test';
  2 | describe("suite", () => { class A { static { mock.timers.enable(); } } mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(28): import {describe, mock} from 'node:test';\ndescribe(\"suite\", () => { class A { static { mock.timers.enable(); } } mock.timers.enable(); }); 2`] = `

Message:
  1 | import {describe, mock} from 'node:test';
> 2 | describe("suite", () => { class A { static { mock.timers.enable(); } } mock.timers.enable(); });
    |                                                                        ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(29): import {beforeEach, mock} from 'node:test';\nbeforeEach(() => { class A { static { mock.timers.enable(); mock.timers.enable(); } } }); 1`] = `

  1 | import {beforeEach, mock} from 'node:test';
  2 | beforeEach(() => { class A { static { mock.timers.enable(); mock.timers.enable(); } } });

`;

exports[`no-duplicate-mock-timers-enable > invalid(29): import {beforeEach, mock} from 'node:test';\nbeforeEach(() => { class A { static { mock.timers.enable(); mock.timers.enable(); } } }); 2`] = `

Message:
  1 | import {beforeEach, mock} from 'node:test';
> 2 | beforeEach(() => { class A { static { mock.timers.enable(); mock.timers.enable(); } } });
    |                                                             ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(3): import {mock, only} from 'node:test';\nonly('title', () => { mock.timers.enable(); mock.timers.enable(); }); 1`] = `

  1 | import {mock, only} from 'node:test';
  2 | only('title', () => { mock.timers.enable(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(3): import {mock, only} from 'node:test';\nonly('title', () => { mock.timers.enable(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import {mock, only} from 'node:test';
> 2 | only('title', () => { mock.timers.enable(); mock.timers.enable(); });
    |                                             ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(30): import test, {mock} from 'node:test';\ntest(\"title\", t => { class A { static { t.mock.timers.enable(); t.mock.timers.enable(); } } }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { class A { static { t.mock.timers.enable(); t.mock.timers.enable(); } } });

`;

exports[`no-duplicate-mock-timers-enable > invalid(30): import test, {mock} from 'node:test';\ntest(\"title\", t => { class A { static { t.mock.timers.enable(); t.mock.timers.enable(); } } }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { class A { static { t.mock.timers.enable(); t.mock.timers.enable(); } } });
    |                                                                 ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(31): import test from 'node:test';\ntest.mock.timers.enable();\ntest.mock.timers.enable(); 1`] = `

  1 | import test from 'node:test';
  2 | test.mock.timers.enable();
  3 | test.mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(31): import test from 'node:test';\ntest.mock.timers.enable();\ntest.mock.timers.enable(); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test.mock.timers.enable();
> 3 | test.mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(32): import * as nodeTest from 'node:test';\nnodeTest.mock.timers.enable();\nnodeTest.mock.timers.enable(); 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.mock.timers.enable();
  3 | nodeTest.mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(32): import * as nodeTest from 'node:test';\nnodeTest.mock.timers.enable();\nnodeTest.mock.timers.enable(); 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | nodeTest.mock.timers.enable();
> 3 | nodeTest.mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(33): import {mock as tracker} from 'node:test';\ntracker.timers.enable();\ntracker.timers.enable(); 1`] = `

  1 | import {mock as tracker} from 'node:test';
  2 | tracker.timers.enable();
  3 | tracker.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(33): import {mock as tracker} from 'node:test';\ntracker.timers.enable();\ntracker.timers.enable(); 2`] = `

Message:
  1 | import {mock as tracker} from 'node:test';
  2 | tracker.timers.enable();
> 3 | tracker.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(34): import {describe, mock} from 'node:test';\ndescribe(\"title\", () => { mock.timers.enable(); mock.timers.enable(); }); 1`] = `

  1 | import {describe, mock} from 'node:test';
  2 | describe("title", () => { mock.timers.enable(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(34): import {describe, mock} from 'node:test';\ndescribe(\"title\", () => { mock.timers.enable(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import {describe, mock} from 'node:test';
> 2 | describe("title", () => { mock.timers.enable(); mock.timers.enable(); });
    |                                                 ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(35): import {describe, mock} from 'node:test';\ndescribe.todo(\"title\", () => { mock.timers.enable(); mock.timers.enable(); }); 1`] = `

  1 | import {describe, mock} from 'node:test';
  2 | describe.todo("title", () => { mock.timers.enable(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(35): import {describe, mock} from 'node:test';\ndescribe.todo(\"title\", () => { mock.timers.enable(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import {describe, mock} from 'node:test';
> 2 | describe.todo("title", () => { mock.timers.enable(); mock.timers.enable(); });
    |                                                      ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(36): import {suite, mock} from 'node:test';\nsuite(\"title\", () => { mock.timers.enable(); mock.timers.enable(); }); 1`] = `

  1 | import {suite, mock} from 'node:test';
  2 | suite("title", () => { mock.timers.enable(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(36): import {suite, mock} from 'node:test';\nsuite(\"title\", () => { mock.timers.enable(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import {suite, mock} from 'node:test';
> 2 | suite("title", () => { mock.timers.enable(); mock.timers.enable(); });
    |                                              ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(37): import test, {mock} from 'node:test';\nfoo.skip(() => { test(\"title\", () => { mock.timers.enable(); mock.timers.enable(); }); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | foo.skip(() => { test("title", () => { mock.timers.enable(); mock.timers.enable(); }); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(37): import test, {mock} from 'node:test';\nfoo.skip(() => { test(\"title\", () => { mock.timers.enable(); mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | foo.skip(() => { test("title", () => { mock.timers.enable(); mock.timers.enable(); }); });
    |                                                              ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(38): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); t.mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { t.mock.timers.enable(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(38): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { t.mock.timers.enable(); t.mock.timers.enable(); });
    |                                              ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(39): import test, {mock} from 'node:test';\ntest(\"parent\", t => { t.test(\"child\", child => { child.mock.timers.enable(); child.mock.timers.enable(); }); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("parent", t => { t.test("child", child => { child.mock.timers.enable(); child.mock.timers.enable(); }); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(39): import test, {mock} from 'node:test';\ntest(\"parent\", t => { t.test(\"child\", child => { child.mock.timers.enable(); child.mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("parent", t => { t.test("child", child => { child.mock.timers.enable(); child.mock.timers.enable(); }); });
    |                                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(4): import {mock, todo} from 'node:test';\ntodo('title', () => { mock.timers.enable(); mock.timers.enable(); }); 1`] = `

  1 | import {mock, todo} from 'node:test';
  2 | todo('title', () => { mock.timers.enable(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(4): import {mock, todo} from 'node:test';\ntodo('title', () => { mock.timers.enable(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import {mock, todo} from 'node:test';
> 2 | todo('title', () => { mock.timers.enable(); mock.timers.enable(); });
    |                                             ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(40): import test, {mock} from 'node:test';\ntest(\"title\", (t = undefined) => { t.mock.timers.enable(); t.mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", (t = undefined) => { t.mock.timers.enable(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(40): import test, {mock} from 'node:test';\ntest(\"title\", (t = undefined) => { t.mock.timers.enable(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", (t = undefined) => { t.mock.timers.enable(); t.mock.timers.enable(); });
    |                                                            ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(41): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.mock.timers.enable(); t.mock.timers.enable(); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach(t => { t.mock.timers.enable(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(41): import {beforeEach} from 'node:test';\nbeforeEach(t => { t.mock.timers.enable(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach(t => { t.mock.timers.enable(); t.mock.timers.enable(); });
    |                                           ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(42): import {test} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); t.mock.timers.enable(); }, {skip: true}); 1`] = `

  1 | import {test} from 'node:test';
  2 | test("title", t => { t.mock.timers.enable(); t.mock.timers.enable(); }, {skip: true});

`;

exports[`no-duplicate-mock-timers-enable > invalid(42): import {test} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); t.mock.timers.enable(); }, {skip: true}); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test("title", t => { t.mock.timers.enable(); t.mock.timers.enable(); }, {skip: true});
    |                                              ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(43): import {beforeEach} from 'node:test';\nbeforeEach((t = undefined) => { t.mock.timers.enable(); t.mock.timers.enable(); }); 1`] = `

  1 | import {beforeEach} from 'node:test';
  2 | beforeEach((t = undefined) => { t.mock.timers.enable(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(43): import {beforeEach} from 'node:test';\nbeforeEach((t = undefined) => { t.mock.timers.enable(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {beforeEach} from 'node:test';
> 2 | beforeEach((t = undefined) => { t.mock.timers.enable(); t.mock.timers.enable(); });
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(44): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); }); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); }); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(44): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { t.beforeEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); }); });
    |                                                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(45): import {beforeEach, mock} from 'node:test';\nbeforeEach(() => { mock.timers.enable(); mock.timers.enable(); }); 1`] = `

  1 | import {beforeEach, mock} from 'node:test';
  2 | beforeEach(() => { mock.timers.enable(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(45): import {beforeEach, mock} from 'node:test';\nbeforeEach(() => { mock.timers.enable(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import {beforeEach, mock} from 'node:test';
> 2 | beforeEach(() => { mock.timers.enable(); mock.timers.enable(); });
    |                                          ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(46): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.beforeEach((hookContext = undefined) => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); }); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { t.beforeEach((hookContext = undefined) => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); }); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(46): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.beforeEach((hookContext = undefined) => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); }); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { t.beforeEach((hookContext = undefined) => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); }); });
    |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(47): import test, {mock} from 'node:test';\ntest(\"title\", t => {\nt.before(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\nt.after(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\nt.afterEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\n}); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => {
  3 | t.before(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
  4 | t.after(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
  5 | t.afterEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
  6 | });

`;

exports[`no-duplicate-mock-timers-enable > invalid(47): import test, {mock} from 'node:test';\ntest(\"title\", t => {\nt.before(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\nt.after(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\nt.afterEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\n}); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | test("title", t => {
> 3 | t.before(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
    |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  4 | t.after(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
  5 | t.afterEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
  6 | });

`;

exports[`no-duplicate-mock-timers-enable > invalid(47): import test, {mock} from 'node:test';\ntest(\"title\", t => {\nt.before(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\nt.after(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\nt.afterEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\n}); 3`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | test("title", t => {
  3 | t.before(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
> 4 | t.after(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
    |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  5 | t.afterEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
  6 | });

`;

exports[`no-duplicate-mock-timers-enable > invalid(47): import test, {mock} from 'node:test';\ntest(\"title\", t => {\nt.before(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\nt.after(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\nt.afterEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });\n}); 4`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | test("title", t => {
  3 | t.before(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
  4 | t.after(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
> 5 | t.afterEach(hookContext => { hookContext.mock.timers.enable(); hookContext.mock.timers.enable(); });
    |                                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.
  6 | });

`;

exports[`no-duplicate-mock-timers-enable > invalid(48): import test, {mock} from 'node:test';\nmock.timers.enable();\nif (condition) { mock.timers.reset(); }\nmock.timers.enable(); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | if (condition) { mock.timers.reset(); }
  4 | mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(48): import test, {mock} from 'node:test';\nmock.timers.enable();\nif (condition) { mock.timers.reset(); }\nmock.timers.enable(); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | if (condition) { mock.timers.reset(); }
> 4 | mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(49): import test, {mock} from 'node:test';\nmock.timers.enable();\nmock.restoreAll();\nmock.timers.enable(); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | mock.restoreAll();
  4 | mock.timers.enable();

`;

exports[`no-duplicate-mock-timers-enable > invalid(49): import test, {mock} from 'node:test';\nmock.timers.enable();\nmock.restoreAll();\nmock.timers.enable(); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
  2 | mock.timers.enable();
  3 | mock.restoreAll();
> 4 | mock.timers.enable();
    | ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(5): import test, {mock} from 'node:test';\ntest.todo(\"title\", t => { t.mock.timers.enable(); t.mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test.todo("title", t => { t.mock.timers.enable(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(5): import test, {mock} from 'node:test';\ntest.todo(\"title\", t => { t.mock.timers.enable(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test.todo("title", t => { t.mock.timers.enable(); t.mock.timers.enable(); });
    |                                                   ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(50): import test, {mock} from 'node:test';\ntest(\"title\", (t: any) => { (t.mock as any).timers.enable(); (t.mock as any).timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", (t: any) => { (t.mock as any).timers.enable(); (t.mock as any).timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(50): import test, {mock} from 'node:test';\ntest(\"title\", (t: any) => { (t.mock as any).timers.enable(); (t.mock as any).timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", (t: any) => { (t.mock as any).timers.enable(); (t.mock as any).timers.enable(); });
    |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(51): import test, {mock} from 'node:test';\ntest(\"title\", (t: any) => { (t.mock.timers as any).enable(); (t.mock.timers as any).enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", (t: any) => { (t.mock.timers as any).enable(); (t.mock.timers as any).enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(51): import test, {mock} from 'node:test';\ntest(\"title\", (t: any) => { (t.mock.timers as any).enable(); (t.mock.timers as any).enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", (t: any) => { (t.mock.timers as any).enable(); (t.mock.timers as any).enable(); });
    |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(52): import test, {mock} from 'node:test';\ntest(\"title\", (t: any) => { t.mock.timers.enable!(); t.mock.timers.enable!(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", (t: any) => { t.mock.timers.enable!(); t.mock.timers.enable!(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(52): import test, {mock} from 'node:test';\ntest(\"title\", (t: any) => { t.mock.timers.enable!(); t.mock.timers.enable!(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", (t: any) => { t.mock.timers.enable!(); t.mock.timers.enable!(); });
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(53): import {test, getTestContext} from 'node:test';\ntest('a', () => { getTestContext().mock.timers.enable(); getTestContext().mock.timers.enable(); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => { getTestContext().mock.timers.enable(); getTestContext().mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(53): import {test, getTestContext} from 'node:test';\ntest('a', () => { getTestContext().mock.timers.enable(); getTestContext().mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('a', () => { getTestContext().mock.timers.enable(); getTestContext().mock.timers.enable(); });
    |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(54): import {test, getTestContext} from 'node:test';\ntest('a', t => { getTestContext().mock.timers.enable(); t.mock.timers.enable(); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', t => { getTestContext().mock.timers.enable(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(54): import {test, getTestContext} from 'node:test';\ntest('a', t => { getTestContext().mock.timers.enable(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('a', t => { getTestContext().mock.timers.enable(); t.mock.timers.enable(); });
    |                                                         ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(55): import {describe, getTestContext} from 'node:test';\ndescribe('a', () => { getTestContext().mock.timers.enable(); getTestContext().mock.timers.enable(); }); 1`] = `

  1 | import {describe, getTestContext} from 'node:test';
  2 | describe('a', () => { getTestContext().mock.timers.enable(); getTestContext().mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(55): import {describe, getTestContext} from 'node:test';\ndescribe('a', () => { getTestContext().mock.timers.enable(); getTestContext().mock.timers.enable(); }); 2`] = `

Message:
  1 | import {describe, getTestContext} from 'node:test';
> 2 | describe('a', () => { getTestContext().mock.timers.enable(); getTestContext().mock.timers.enable(); });
    |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(6): import test, {mock} from 'node:test';\ntest(\"title\", t => { mock.timers.enable(); t.mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { mock.timers.enable(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(6): import test, {mock} from 'node:test';\ntest(\"title\", t => { mock.timers.enable(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { mock.timers.enable(); t.mock.timers.enable(); });
    |                                            ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(7): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { t.mock.timers.enable(); mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(7): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { t.mock.timers.enable(); mock.timers.enable(); });
    |                                              ^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(8): import test, {mock} from 'node:test';\ntest(\"title\", t => { mock.timers.enable(); t.mock.timers.reset(); t.mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { mock.timers.enable(); t.mock.timers.reset(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(8): import test, {mock} from 'node:test';\ntest(\"title\", t => { mock.timers.enable(); t.mock.timers.reset(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { mock.timers.enable(); t.mock.timers.reset(); t.mock.timers.enable(); });
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;

exports[`no-duplicate-mock-timers-enable > invalid(9): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); mock.timers.reset(); t.mock.timers.enable(); }); 1`] = `

  1 | import test, {mock} from 'node:test';
  2 | test("title", t => { t.mock.timers.enable(); mock.timers.reset(); t.mock.timers.enable(); });

`;

exports[`no-duplicate-mock-timers-enable > invalid(9): import test, {mock} from 'node:test';\ntest(\"title\", t => { t.mock.timers.enable(); mock.timers.reset(); t.mock.timers.enable(); }); 2`] = `

Message:
  1 | import test, {mock} from 'node:test';
> 2 | test("title", t => { t.mock.timers.enable(); mock.timers.reset(); t.mock.timers.enable(); });
    |                                                                   ^^^^^^^^^^^^^^^^^^^^^^ \`mock.timers.enable()\` is already active on this mock tracker. Call \`reset()\` before enabling mock timers again.

`;
